<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context="com.example.reviewapp.reviewapp.activities.LoginActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/login_image_dimen"
        android:layout_height="@dimen/login_image_dimen"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_avtar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lable_quick_query"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/login_heading_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <TextView
        android:id="@+id/login_label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_email"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="@+id/login_label_password"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <EditText
        android:id="@+id/txt_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/selector_xml_listview_back"
        android:inputType="textEmailAddress"
        android:padding="@dimen/dp_5"
        android:singleLine="true"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_label_email"
        app:layout_constraintTop_toTopOf="@+id/login_label_email" />


    <TextView
        android:id="@+id/login_label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_password"
        android:textColor="@color/text_color"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_label_email" />

    <EditText
        android:id="@+id/txt_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/selector_xml_listview_back"
        android:inputType="textPassword"
        android:padding="@dimen/dp_5"
        android:singleLine="true"
        android:textSize="@dimen/sp_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_label_password"
        app:layout_constraintTop_toTopOf="@+id/login_label_password" />
</android.support.constraint.ConstraintLayout>