<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/dp_16">

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="8dp"
        android:text="@string/lable_create_profile"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/login_heading_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/form_info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/screen_title"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/label_create_profile_info"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screen_title" />

    <Button
        android:id="@+id/btn_edit_location_1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="30dip"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:text="@string/label_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_info_text" />

    <TextView
        android:id="@+id/txt_location_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:text="TextView"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/btn_edit_location_1"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_location_1"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/btn_edit_location_1"
        tools:text="Location One" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="*"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/txt_location_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_location_1"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btn_edit_location_2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="30dip"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5"
        android:text="@string/label_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_location_1" />


    <TextView
        android:id="@+id/txt_location_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/btn_edit_location_2"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_location_2"
        app:layout_constraintStart_toStartOf="@+id/txt_location_1"
        app:layout_constraintTop_toTopOf="@+id/btn_edit_location_2"
        app:layout_constraintVertical_bias="0.49"
        tools:text="Location Two" />



    <Button
        android:id="@+id/btn_edit_location_3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="30dip"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:paddingBottom="@dimen/dp_5"
        android:paddingTop="@dimen/dp_5"
        android:text="@string/label_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_location_2" />


    <TextView
        android:id="@+id/txt_location_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/btn_edit_location_3"
        app:layout_constraintEnd_toStartOf="@+id/btn_edit_location_3"
        app:layout_constraintStart_toStartOf="@+id/txt_location_2"
        app:layout_constraintTop_toTopOf="@+id/btn_edit_location_3"
        app:layout_constraintVertical_bias="0.49"
        tools:text="Location Three" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:foregroundTint="@color/colorAccent"
        android:entries="@array/gender_array"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_location_3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Gender:"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner" />
</android.support.constraint.ConstraintLayout>